<resources>
    <string name="app_name">Poll.io</string>
    <string name="title_home">Polls</string>
    <string name="title_starred">Favorites</string>
    <string name="title_account">My Account</string>
    <string name="title_mypolls">My Polls</string>
    <string name="title_voted">Voted On</string>

    <string name="server_client_id">616282045809-ss88h6akvareic53rsa5v5035uj7vbpt.apps.googleusercontent.com</string>
    <string name="google_sign_in_id">616282045809-nnefe0d4171u7jehuqbne1krmn96rvqr.apps.googleusercontent.com</string>

    <item type="id" name="tag_pollitem_index"/>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_main">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_displayName">Display Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_reenterpass">Re-enter your password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_register_login">Don\'t have an account? Register now!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_poll_feed">PollFeedActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="poll_posted_label">Posted From</string>
    <string name ="poll_results_text">Poll Results</string>

    <!--Account Fragment Strings-->
    <string name="account_welcome">Welcome</string>
    <string name="account_change_password">Change Password</string>
    <string name="account_logout">Log Out</string>
    <string name="stats_polls_made">Polls Made</string>
    <string name="stats_voted_on">Polls Voted On</string>
    <string name="stats_votes_cast">Total Votes Cast</string>
    <string name="stats_polls_favorited">Polls Favorited</string>
    <string name="stats_favorited_by_others">Polls Favorited By Others</string>

</resources>
