<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_starred"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/title_starred"/>

    <item
            android:id="@+id/navigation_mine"
            android:icon="@drawable/ic_folder_shared_black_24dp"
            android:title="@string/title_mypolls"/>

    <item
            android:id="@+id/navigation_voted"
            android:icon="@drawable/ic_poll_black_24dp"
            android:title="@string/title_voted"/>

    <item
            android:id="@+id/navigation_account"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/title_account"/>



</menu>
