<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity"
        android:id="@+id/containerRegister" >

    <!-- Register progress -->
    <ImageView
            android:id="@+id/imageView"
            android:layout_width="91dp"
            android:layout_height="85dp"
            app:srcCompat="@drawable/rollypollyclear"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp" android:layout_alignTop="@+id/imageView3"/>

    <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
            android:layout_marginTop="119dp">

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_firstname"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"

                    android:maxLines="1"
                    android:singleLine="true"
                    android:fontFamily="@font/finger_paint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/last_name"
                    android:layout_width="355dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_lastname"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"

                    android:maxLines="1"
                    android:singleLine="true"
                    android:fontFamily="@font/finger_paint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"

                    android:maxLines="1"
                    android:singleLine="true"
                    android:fontFamily="@font/finger_paint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_reenterpass"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"

                    android:maxLines="1"
                    android:singleLine="true"
                    android:fontFamily="@font/finger_paint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/reenter_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_reenterpass"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"

                    android:maxLines="1"
                    android:singleLine="true"
                    android:fontFamily="@font/finger_paint"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
            android:id="@+id/email_register_button"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_register"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="136dp"
            android:layout_alignParentBottom="true" android:layout_marginBottom="84dp"/>

    <ImageView
            android:id="@+id/imageView3"
            android:layout_width="255dp"
            android:layout_height="71dp"
            app:srcCompat="@drawable/trail"
            android:layout_alignParentEnd="true" android:layout_alignParentTop="true" android:layout_marginTop="27dp"/>

    <ImageView
            android:id="@+id/imageView5"
            android:layout_height="114dp"
            app:srcCompat="@drawable/grass"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:adjustViewBounds="true" android:cropToPadding="true"
            android:layout_width="match_parent"/>
</RelativeLayout>