<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".LoginActivity"
              >

    <!-- Login progress -->

    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true" android:layout_alignParentEnd="true">


        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:orientation="vertical"

                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="107dp"
                    android:src="@drawable/polliologocropped"
                    android:maxWidth="200dp"
                    android:maxHeight="200dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"

            />

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" android:hint="Password"/>

            </android.support.design.widget.TextInputLayout>
            <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"/>

            <Button
                    android:id="@+id/register_here_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_register_login"
            />
            <!--android:text="@string/register_title" **/ -->
            <android.support.constraint.Guideline
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/guideline"/>
            <TextView

                    android:text="I forgot my password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgotPassText"
                    android:textAlignment="center" android:textSize="18sp" android:lineSpacingExtra="12sp"/>
            <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <com.google.android.gms.common.SignInButton
                        android:id="@+id/google_sign_in_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:baselineAligned="false"
                        android:layout_alignParentTop="true" android:layout_alignParentStart="true"
                        android:layout_marginStart="120dp">
                </com.google.android.gms.common.SignInButton>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>