<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".AccountFragment" android:id="@+id/acct_main_layout">


    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/acct_scrollview"
            app:layout_constraintTop_toBottomOf="@+id/acct_user_name_box">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.gms.maps.MapView
                    android:layout_height="180dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/map" app:layout_constraintTop_toTopOf="@+id/acct_scrollview"
                    android:layout_marginTop="8dp" android:layout_marginLeft="0dp" android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp" android:layout_marginRight="0dp"
                    android:layout_width="330dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_gravity="center_horizontal" android:layout_marginBottom="8dp"/>
            <Button
                    android:text="@string/account_change_password"
                    android:layout_width="241dp"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="315dp"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/changePass" android:layout_gravity="center_horizontal"/>
            <Button
                    android:text="@string/account_logout"
                    android:layout_width="241dp"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="386dp"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/logout_button" android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/acct_user_name_box" android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@+id/acct_top_img_box">

        <TextView
                android:text="@string/account_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/acct_welcome_text"
                android:fontFamily="@font/finger_paint" android:textSize="18sp"
                android:layout_alignParentStart="true" android:layout_marginStart="38dp"
                android:layout_alignParentTop="true"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/acct_user_name"
                android:layout_alignParentTop="true"
                android:fontFamily="@font/finger_paint"
                android:textColor="@color/colorPrimary" android:textSize="18sp"
                android:layout_toEndOf="@+id/acct_welcome_text" android:layout_marginStart="16dp"/>
    </RelativeLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="368dp"
            android:layout_height="84dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/acct_top_img_box">
        <ImageView
                android:src="@drawable/rollypollyclear"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/acct_polly_img"
                android:contentDescription="rolly polly top"
                android:layout_weight="1"/>
        <ImageView
                android:src="@drawable/trail"
                android:layout_width="221dp"
                android:layout_height="match_parent" android:id="@+id/acct_trail_img"
                android:contentDescription="trail"
                android:layout_weight="1"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>